@@ -5,11 +5,14 @@
    This release is built upon 1.4 alpha. See changes of 1.4 alpha as well.
     - class 'ArrayExtension' renamed to 'ExtArrayExtension'
     - '#arrayindex' will only expand options/default when required.
+    - '#arraymerge', '#arrayunion', '#arraydiff' and '#arrayintersect' can handle multiple arrays now.
     - Compatbility mode variable '$egArrayExtensionCompatbilityMode' is set to false by default. See
       Version 1.4 alpha for further information. Further changes to the compatbility mode behavior
       in version 2.0:
       + '#arrayindex' will return its default also in case of existing index but empty value. This
         makes the function consistent with Variables '#var' and hash tables '#hashvalue'.
+      + '#arraymerge', '#arrayunion', '#arraydiff' and '#arrayintersect' with only one array for
+        the operation will make a copy of that array instead of creating no array at all.
       + See 1.4 alpha for previous changes
 
 
